<resources>
    <string name="app_name">Solar Calculator</string>
    <string name="search">Search</string>
    <string name="enter_address">Digite o endereço</string>
    <string name="back">Back</string>
    <string name="calculate">Calculate</string>
    <string name="complete_address">Complete Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="street_view">Street View</string>
    <string name="total_energy">Total Energy</string>
    <string name="home">Home</string>
    <string name="money_saved">Money Saved</string>
    <string name="_0_2">20%</string>
    <string name="_0_50">R$0.50</string>
    <string name="solar_panel">Solar Panel</string>
    <string name="energy_2">Energy</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="title_activity_panel">PanelActivity</string>
    <string name="energy_info">Aqui você pode configurar os valores relacionados a geração de energia</string>
    <string name="panel_info">Aqui você pode configurar os valores relacionados ao painel solar</string>
    <string name="save">Save</string>
    <string name="per_odo_de_tempo">Período de tempo para cálculo</string>
    <string name="valor_do_kwh">Valor do kWh</string>
    <string name="numero_de_c_lulas_para_c_lculo">Numero de células para cálculo</string>
    <string name="_1_un">1.un</string>
    <string name="taxa_de_efici_ncia_da_c_lula">Taxa de eficiência da célula</string>
    <string name="rea_total_do_painel_solar_em_m">Área total do painel solar em m²</string>
    <string name="_1_5m">1,5m²</string>
    <string name="base_de_dados_para_c_lculo">Base de dados para cálculo</string>
    <string name="current_location">Usar localização atual</string>
    <string name="sun_image">solarCalculatorImage</string>
    <string name="title_relatorio">Relatório de Potencial de Energia Solar</string>
    <string name="introducao_title">Introdução</string>
    <string name="introducao_relatorio">Objetivo desse relatório é apresentar uma análise superficial a respeito do potencial de energia solar na localização especificada.</string>
    <string name="roi_title">Economia e Retorno do Investimento</string>
    <string name="ambiental_title">Impacto Ambiental</string>
    <string name="previsao_title">Previsão de Clima e Impacto na Produção</string>
    <string name="educacional_title">Módulo Educacional</string>
    <string name="educacional">Princípios de Funcionamento: \nOs painéis solares captam a luz do sol e geram eletricidade em corrente contínua (CC). O inversor converte essa eletricidade em corrente alternada (CA) utilizável pelos aparelhos elétricos. A energia excedente pode ser armazenada em baterias ou injetada na rede elétrica.</string>
    <string name="btn_videos_text">Assista a Vídeos Explicativos</string>
    <string-array name="periodos">
        <item>Diário</item>
        <item>Mensal</item>
    </string-array>
    <string-array name="incidencia">
        <item>Radiação Solar de Ondas Curtas GHI</item>
        <item>Radiação Solar Direta</item>
        <item>Radiação Solar Difusa DHI</item>
        <item>Irradiância Normal Direta DNI</item>
        <item>Radiação Inclinada Global GTI</item>
        <item>Radiação Solar Terrestre</item>
    </string-array>
</resources>