<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/CustomScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <!-- Título do Relatório -->
            <TextView
                android:id="@+id/reportTitle"
                style="@style/CustomTextViewCalculateTittle"
                android:text="@string/title_relatorio" />

            <!-- Introdução -->
            <TextView
                android:id="@+id/introductionTitle"
                style="@style/CustomTextViewCalculateSubTittle"
                android:text="@string/introducao_title" />
            <TextView
                android:id="@+id/introductionText"
                style="@style/CustomGenericTextView"
                android:text="@string/introducao_relatorio" />

            <!-- Economia e Retorno do Investimento -->
            <TextView
                android:id="@+id/economyTitle"
                style="@style/CustomTextViewCalculateSubTittle"
                android:text="@string/roi_title"
                />
            <TextView
                android:id="@+id/economyPeriod"
                style="@style/CustomGenericTextView" />
            <TextView
                android:id="@+id/economyROI"
                style="@style/CustomGenericTextView" />

            <!-- Impacto Ambiental -->
            <TextView
                android:id="@+id/environmentTitle"
                style="@style/CustomTextViewCalculateSubTittle"
                android:text="@string/ambiental_title" />
            <TextView
                android:id="@+id/environmentCO2"
                style="@style/CustomGenericTextView" />

            <!-- Previsão de Clima e Impacto na Produção -->
            <TextView
                android:id="@+id/weatherTitle"
                style="@style/CustomTextViewCalculateSubTittle"
                android:text="@string/previsao_title" />
            <TextView
                android:id="@+id/weatherForecast"
                style="@style/CustomGenericTextView" />
            <TextView
                android:id="@+id/weatherImpact"
                style="@style/CustomGenericTextView"
                android:paddingBottom="8dp"/>

            <!-- Módulo Educacional -->
            <TextView
                android:id="@+id/educationTitle"
                style="@style/CustomTextViewCalculateSubTittle"
                android:text="@string/educacional_title" />
            <TextView
                android:id="@+id/educationText"
                style="@style/CustomGenericTextView"
                android:text="@string/educacional" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVideoTutorial"
                style="@style/CustomCalculateButtonStyle"
                android:text="@string/btn_videos_text" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHome"
        style="@style/CustomCalculateButtonHome"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>