<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PanelActivity">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/CustomTextViewTittle"
        android:text="@string/panel_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewBase"
        style="@style/CustomTextView"
        android:text="@string/base_de_dados_para_c_lculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerIncidencia"
        style="@style/CustomSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBase"/>

    <TextView
        android:id="@+id/textViewCelulas"
        style="@style/CustomTextView"
        android:text="@string/numero_de_c_lulas_para_c_lculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIncidencia"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editCelula"
        style="@style/CustomTextInputNumber"
        android:hint="@string/_1_un"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCelulas"/>

    <TextView
        android:id="@+id/textViewArea"
        style="@style/CustomTextView"
        android:text="@string/rea_total_do_painel_solar_em_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCelula"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editArea"
        style="@style/CustomTextInputNumber"
        android:hint="@string/_1_5m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewArea" />

    <TextView
        android:id="@+id/textViewTaxa"
        style="@style/CustomTextView"
        android:text="@string/taxa_de_efici_ncia_da_c_lula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editArea"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTaxa"
        style="@style/CustomTextInputNumber"
        android:hint="@string/_0_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaxa" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSavePanel"
        style="@style/CustomButtonStyle"
        android:text="@string/save"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaxa"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        style="@style/CustomButtonStyle"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSavePanel"/>

</androidx.constraintlayout.widget.ConstraintLayout>