<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EnergyActivity">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/CustomTextViewTittle"
        android:text="@string/energy_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewPeriodo"
        style="@style/CustomTextView"
        android:text="@string/per_odo_de_tempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>

    <Spinner
        android:id="@+id/spinnerPeriodos"
        style="@style/CustomSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeriodo"/>

    <TextView
        android:id="@+id/textViewValor"
        style="@style/CustomTextView"
        android:text="@string/valor_do_kwh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPeriodos"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPreco"
        style="@style/CustomTextInputNumber"
        android:hint="@string/_0_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValor"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveEnergy"
        style="@style/CustomButtonStyle"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPreco"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        style="@style/CustomButtonStyle"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveEnergy" />

</androidx.constraintlayout.widget.ConstraintLayout>