<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/CustomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <View
        android:id="@+id/view"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/locationSwitch"
        style="@style/CustomSwitchStyle"
        android:text="@string/current_location"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/editAddress"
        style="@style/CustomEditTextStyle"
        android:hint="@string/enter_address"
        android:autofillHints="Address"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/locationSwitch"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        style="@style/CustomButtonStyle"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"/>

    <ImageView
        android:id="@+id/solarCalculatorImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/sun_image"
        android:src="@drawable/icon_sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>